--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^14.3.3",
     "@ngrx/store-devtools": "^14.3.3",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
