--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href=/ngrx-app",
+    "build": "ng build --base-href=/https://raniganj.github.io/ngrx-app/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
